--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   padding: 0px;
   box-sizing: border-box;
   margin: 0px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .content {
   width: 90%;
@@ -28,6 +29,46 @@ body {
   display: flex;
   gap: 20px;
 }
+.prompt-box {
+  margin: 20px 0;
+  padding: 15px;
+  width: 90%;
+  max-width: 400px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  position: fixed;
+  display: none;
+  justify-self: center;
+  gap: 30px;
+  flex-direction: column;
+  background-color: #ffffff;
+  box-shadow: 0px 3px 30px rgba(0, 0, 0, 0.3);
+}
+.prompt-box i.fa-close {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  cursor: pointer;
+}
+.prompt-box h2 {
+  margin-bottom: 10px;
+  font-size: 20px;
+}
+.prompt-box input {
+  padding: 15px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+}
+.prompt-box .add-button {
+  padding: 15px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+}
 .fb {
   padding: 9px 12px;
   border: 10px;
@@ -37,7 +78,7 @@ body {
   cursor: pointer;
 }
 .fb:hover {
-  color: black;
+  background: rgb(41, 41, 131);
 }
 .sb {
   padding: 8px 12px;
@@ -56,6 +97,13 @@ i.fa-check-circle-o {
 i.fa-trash-o {
   float: right;
   color: gray;
+  font-size: 24px;
+}
+i.fa-check {
+  float: right;
+  color: gray;
+  font-size: 24px;
+  margin-right: 15px;
 }
 
 p {
@@ -66,36 +114,30 @@ p {
 ul {
   list-style: none;
 }
+
 ul li {
   border-bottom: 1px solid rgb(243, 229, 229);
   padding: 20px 20px;
+  font-size: 18px;
 }
 .stroked {
   text-decoration: line-through;
   color: gray;
   cursor: pointer;
 }
+.fa-trash-o:hover {
+  color: rgb(214, 0, 0);
+}
+.fa-check:hover {
+  color: green;
+  cursor: pointer;
+}
 
-li:nth-of-type(4) {
+li:hover {
   background: linear-gradient(to right, #e0e7ff, transparent);
-  border-left: 5px solid rgba(0, 0, 225, 0.456);
+  border-left: 4px solid rgba(0, 0, 225, 0.3);
   transition: background 0.3 ease-in-out;
   cursor: pointer;
-}
-li:nth-of-type(3):hover {
-  background: linear-gradient(to right, #e0e7ff77, transparent);
-  cursor: pointer;
-  transition: background 0.3 ease-in-out;
-}
-li:nth-of-type(4):hover {
-  background: linear-gradient(to right, #e0e7ff, transparent);
-  cursor: pointer;
-  transition: background 0.3 ease-in-out;
-}
-li:nth-of-type(5):hover {
-  background: linear-gradient(to right, #e0e7ff7a, transparent);
-  cursor: pointer;
-  transition: background 0.3 ease-in-out;
 }
 
 .foot {
@@ -104,26 +146,8 @@ li:nth-of-type(5):hover {
   text-align: center;
   font-size: 12px;
 }
-@media {
-  .nav-bar {
-    display: flex;
 
-    gap: 1px;
-  }
-  .content {
-    max-width: 330px;
-  }
-  p {
-    color: gray;
-    padding-bottom: 30px;
-    font-size: 13px;
-  }
-  .foot {
-    padding: 23px;
-    color: grey;
-    text-align: center;
-    font-size: 15px;
-  }
+@media (max-width: 768px) {
   .icon {
     display: none;
   }
